[tool.poetry]
name = "shuttlebuilder"
version = "0.2.11"
description = ""
authors = ["martin <m.starman@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
simpledomcontrol = "^0.57.18"
chemotion-api = "^211.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
