[tool.poetry]
name = "ShuttleBuilder"
version = "0.2.11"
description = ""
authors = ["martin <m.starman@live.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
simpledomcontrol = "^0.58.1"
chemotion-api = "^211.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
