[tool.poetry]
name = "ShuttleBuilder"
version = "0.2.14"
description = ""
authors = ["martin <m.starman@live.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
simpledomcontrol = "^0.58.6"
chemotion-api = "^211.0.1"
pywinrm = "^0.5.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
